# thermit

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cicd.yml  cicd_client.yml  cicd_server.yml  markdown-style.rb  md_lint.yml  pull-request.yml
client/: Cargo.toml
server/: .env.example  .gitignore  Cargo.toml  README.md  cert.pem  key.pem
server/docker/: postgres.sh
server/docs/: swagger.yaml
server/migrations/2021-02-27-112911_create_users/: down.sql  up.sql
server/migrations/2021-03-07-173414_create_rooms/: down.sql  up.sql
server/migrations/2021-04-03-161950_add_dates/: down.sql  up.sql
server/migrations/2021-04-07-075216_create_messages/: down.sql  up.sql
server/seed/: seed.sh  seed.sql
server/src/: errors.rs  main.rs  schema.rs  test_db.rs  test_helpers.rs
server/src/message/: mod.rs  model.rs  routes.rs
server/src/room/: model.rs  routes.rs
server/src/user/: auth.rs  mod.rs  model.rs  routes.rs
