[package]
name = "server"
version = "0.1.0"
authors = ["sirkrypt0 <me+github@kantusch.dev>", "frcroth <frcroth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
