[package]
name = "server"
version = "0.1.0"
authors = ["sirkrypt0 <me+github@kantusch.dev>", "frcroth <frcroth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
r2d2 = "0.8.8"
derive_more = "0.99.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
pwhash = "1"
